# NextGenSandboxHub

./: .gitignore  .gitmodules  FORMULATIONS.md  INSTALL.md  LICENSE  README.md  bootstrap.sh  pyproject.toml  requirements.txt  run_launcher.slurm  sandbox.py  sandbox_launcher.py  version.txt
configs/: calib_config.yaml  config_workflow.yaml  sandbox_config.yaml
configs/basefiles/: config_casam.yaml  config_cfe-x.yaml  config_cfe.yaml  config_dhbv.yaml  config_lstm.yaml  config_noahowp.input  config_pet.yaml  config_sacsma.namelist.input  config_snow17.namelist.input  custom.yaml  model_calib_params.yaml  sacsma_params_cat.HHWM8.txt  snow17_params_cat.txt
configs/calib/: cfe_refkdt.yaml
configs/tnc/: config_calib_dangermond.yaml  config_calib_dangermond_lasam.yaml  config_calib_dangermond_well.yaml
doc/: configuration.md  install.md  schematic.md
doc/env/: environment.yml  requirements_forcing.txt  requirements_forcing.yml  sandbox_environment.yaml  sandbox_environment_full.yaml  sandbox_requirements.txt
plugins/ngen_cal_plugins/: setup.cfg
plugins/ngen_cal_plugins/src/: metrics.py  ngen_cal_well_plugin.py  objectives.py  read_obs_nonhourly_plugin.py  read_obs_plugin.py  save_divide_output_plugin.py  save_sim_obs_plugin.py  units.py
plugins/ngen_cal_plugins/tests/: test_read_obs_plugin.py
src/R/: aspect.R  custom_functions.R  dem.R  driver.R  giuh.R  helper.R  install_load_libs.R  main.R  qaqc_model_attributes.R  slope.R  tidy_hf.R  twi_width.R  veg_type.R
src/python/: build_model_instances.py  configuration.py  context.py  data_loader.py  (+15 more)
src_py/: nlcd_vegtyp.py
src_r/: custom_functions.R  driver.R  helper.R  install_load_libs.R  main.R  qaqc_model_attributes.R  slope.R  tidy_hf.R  veg_type.R
test/: sandbox_test.py
utils/: README.md  build_models.sh  build_sandbox.sh  build_venv_subset.sh  requirements.txt  sandbox_env.sh  setup_hpc.sh
(+36 files in other folders)
