[metadata]
name = ngen_cal_plugins
version = 0.1
description = custom plugins for ngen-cal
author = Ahmad Jan Khattak
author_email =ahmad.jan.khattak@noaa.gov
url = https://github.com/ajkhattak/NextGenSandboxHub

classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Education
    Intended Audience :: Science/Research
    License :: Free To Use But Restricted
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Scientific/Engineering :: Hydrology
    Operating System :: OS Independent

[options]
packages = ngen_cal_plugins
package_dir =
    ngen_cal_plugins = src
python_requires = >=3.8
install_requires =
      hydrotools.metrics
      hypy
      ngen.cal
      numpy
      pandas
include_package_data = True
[options.packages.find]
where = src


# notes
# If this layout changes to packages = find:, update the plugin import paths.
#packages = find:
#package_dir =
#     = src
